2025-09-01  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53898: Completion/Unix/Command/_date,
	Completion/Unix/Command/_pgrep, Completion/Unix/Command/_pmap
	Completion/Unix/Command/_sysctl: update a few completers.
	_pmap is moved from Linux/Command/ to Unix/Command/.

2025-08-28  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53866: Completion/Unix/Command/_man: fix _man for NetBSD

2025-08-24  Eric Cook  <llua@gmx.com>

	* unposted: Config/version.mk: Test release: zsh-5.9.0.3-test.

2025-08-16  dana  <dana@dana.is>

	* 53808: Doc/Zsh/expn.yo: clarify Yn globqual explanation

2025-08-07  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53827: Completion/Debian/Command/_sbuild: fix/update _sbuild

2025-08-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Dima Kogan: 53824: Completion/Debian/Command/_sbuild: short
	options with arg should be "-c arg" (not "-c=arg")

	* Frederick Zhang: 53825: Completion/Unix/Command/_git: fix
	regexp in __git_extract_aliases

2025-07-18  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53821: Doc/Zsh/builtins.yo, Doc/Zsh/calsys.yo, Doc/Zsh/compctl.yo,
	Doc/Zsh/compsys.yo, Doc/Zsh/compwid.yo, Doc/Zsh/cond.yo,
	Doc/Zsh/contrib.yo, Doc/Zsh/exec.yo, Doc/Zsh/expn.yo,
	Doc/Zsh/files.yo, Doc/Zsh/func.yo, Doc/Zsh/grammar.yo,
	Doc/Zsh/intro.yo, Doc/Zsh/invoke.yo, Doc/Zsh/jobs.yo,
	Doc/Zsh/manual.yo, Doc/Zsh/mod_compctl.yo, Doc/Zsh/mod_complete.yo,
	Doc/Zsh/mod_complist.yo, Doc/Zsh/mod_computil.yo,
	Doc/Zsh/mod_datetime.yo, Doc/Zsh/mod_mathfunc.yo,
	Doc/Zsh/mod_newuser.yo, Doc/Zsh/mod_parameter.yo,
	Doc/Zsh/mod_private.yo, Doc/Zsh/mod_sched.yo, Doc/Zsh/mod_stat.yo,
	Doc/Zsh/mod_tcp.yo, Doc/Zsh/mod_watch.yo, Doc/Zsh/mod_zftp.yo,
	Doc/Zsh/mod_zle.yo, Doc/Zsh/mod_zleparameter.yo,
	Doc/Zsh/mod_zpty.yo, Doc/Zsh/mod_zutil.yo, Doc/Zsh/modules.yo,
	Doc/Zsh/options.yo, Doc/Zsh/params.yo, Doc/Zsh/prompt.yo,
	Doc/Zsh/redirect.yo, Doc/Zsh/roadmap.yo, Doc/Zsh/tcpsys.yo,